--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,17 @@
 >
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.seasar.dao.annotation.tiger</groupId>
-  <artifactId>s2-dao-tiger</artifactId>
-  <packaging>jar</packaging>
-  <name>S2Dao Tiger</name>
+  <artifactId>s2-dao-tiger-project</artifactId>
+  <packaging>pom</packaging>
+  <name>S2Dao Tiger Project</name>
   <version>1.0.29-SNAPSHOT</version>
   <description></description>
   <url>http://s2dao.seasar.org/</url>
   <inceptionYear>2005</inceptionYear>
+  <modules>
+    <module>s2-dao-tiger</module>
+    <module>s2-dao-tiger-examples</module>
+  </modules>
   <build>
     <defaultGoal>validate</defaultGoal>
     <pluginManagement>
@@ -45,6 +49,7 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
+      <type>jar</type>
       <scope>test</scope>
     </dependency>
   </dependencies>
