git-svn-id: https://www.seasar.org/svn/s2dao/trunk/s2dao-tiger@110 a0133a49-3802-0410-849b-833ed23e894f

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd"
 >
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.seasar.dao.annotation.tiger</groupId>
+  <groupId>org.seasar.dao.annotation</groupId>
   <artifactId>s2-dao-tiger-project</artifactId>
   <packaging>pom</packaging>
   <name>S2Dao Tiger Project</name>
