--- a/s2-dao-tiger/pom.xml
+++ b/s2-dao-tiger/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.seasar.dao</groupId>
     <artifactId>s2-dao-tiger-project</artifactId>
-    <version>1.0.29</version>
+    <version>1.0.0RC1</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>s2-dao-tiger</artifactId>
@@ -14,4 +14,20 @@
   <name>S2Dao Tiger</name>
   <description></description>
   <url>http://s2dao.seasar.org/</url>
+    <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>3.8.1</version>
+      <type>jar</type>
+    </dependency>
+    <dependency>
+      <groupId>hsqldb</groupId>
+      <artifactId>hsqldb</artifactId>
+      <version>1.7.2.2</version>
+      <type>jar</type>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
+  
 </project>
