git-svn-id: https://www.seasar.org/svn/s2dao/trunk/s2dao-tiger@174 a0133a49-3802-0410-849b-833ed23e894f

--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,7 @@
     <dependency>
       <groupId>org.seasar.dao</groupId>
       <artifactId>s2-dao</artifactId>
-      <version>1.0.30RC1</version>
+      <version>1.0.30</version>
       <type>jar</type>
     </dependency>
     <dependency>
