--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
-<project name="s2dao" default="dist" basedir=".">
-	<property name="ver" value="1.0.0"/>
+<project name="s2dao-tiger" default="dist" basedir=".">
+	<property name="ver" value="1.0.31"/>
 
 	<target name="dist">
 		<mkdir dir="target"/>
