--- a/build.xml
+++ b/build.xml
@@ -10,7 +10,8 @@
 			</zipfileset>
 			<zipfileset prefix="s2dao-tiger/lib" 
 				dir="s2-dao-tiger/target">
-				<include name="s2-dao-${ver}.jar"/>
+				<include name="s2-dao-tiger-${ver}.jar"/>
+				<include name="s2-dao-tiger-${ver}-sources.jar"/>
 			</zipfileset>
 			<zipfileset prefix="s2dao-tiger/resources" 
 				dir="s2-dao-tiger/src/test/resources">
