git-svn-id: https://www.seasar.org/svn/s2dao/trunk/s2dao-tiger@253 a0133a49-3802-0410-849b-833ed23e894f

--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,12 @@
             <target>1.5</target>
           </configuration>
         </plugin>
+        <plugin>
+          <artifactId>maven-deploy-plugin</artifactId>
+          <configuration>
+            <updateReleaseInfo>true</updateReleaseInfo>
+          </configuration>
+        </plugin>
       </plugins>
     </pluginManagement>
     <plugins>
