--- a/s2-dao-tiger/pom.xml
+++ b/s2-dao-tiger/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.seasar.dao</groupId>
     <artifactId>s2-dao-tiger-project</artifactId>
-    <version>1.0.34</version>
+    <version>1.0.35-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>s2-dao-tiger</artifactId>
@@ -21,5 +21,13 @@
       <version>3.8.1</version>
       <type>jar</type>
     </dependency>
+    <!--
+    <dependency>
+      <groupId>org.seasar.dao</groupId>
+      <artifactId>s2-dao</artifactId>
+      <version>1.0.35-SNAPSHOT</version>
+      <type>test-jar</type>
+    </dependency>
+    -->
   </dependencies>
 </project>
