git-svn-id: https://www.seasar.org/svn/s2dao/trunk/s2dao-tiger@410 a0133a49-3802-0410-849b-833ed23e894f

--- a/s2-dao-tiger-examples/pom.xml
+++ b/s2-dao-tiger-examples/pom.xml
@@ -14,6 +14,19 @@
   <name>S2Dao Tiger Examples</name>
   <description></description>
   <url>http://s2dao.seasar.org/</url>
+  <build>
+    <testResources>
+      <testResource>
+        <directory>${basedir}/src/test/resources</directory>
+      </testResource>
+      <testResource>
+        <directory>${basedir}/../s2-dao-tiger/src/test/resources</directory>
+        <includes>
+          <include>data/**</include>
+        </includes>
+      </testResource>
+    </testResources>
+  </build>
   <dependencies>
     <dependency>
       <groupId>org.seasar.dao</groupId>
