--- a/.classpath
+++ b/.classpath
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry output="s2-dao-tiger/target/classes" kind="src" path="s2-dao-tiger/src/main/java"/>
-	<classpathentry output="s2-dao-tiger/target/classes" kind="src" path="s2-dao-tiger/src/main/resources"/>
-	<classpathentry output="s2-dao-tiger/target/test-classes" kind="src" path="s2-dao-tiger/src/test/java"/>
-	<classpathentry output="s2-dao-tiger/target/test-classes" kind="src" path="s2-dao-tiger/src/test/resources"/>
-	<classpathentry output="s2-dao-tiger-examples/target/classes" kind="src" path="s2-dao-tiger-examples/src/main/java"/>
-	<classpathentry output="s2-dao-tiger-examples/target/classes" kind="src" path="s2-dao-tiger-examples/src/main/resources"/>
-	<classpathentry output="s2-dao-tiger-examples/target/test-classes" kind="src" path="s2-dao-tiger-examples/src/test/java"/>
-	<classpathentry output="s2-dao-tiger-examples/target/test-classes" kind="src" path="s2-dao-tiger-examples/src/test/resources"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.5.0_06"/>
+	<classpathentry output="build/s2-dao-tiger/classes" kind="src" path="s2-dao-tiger/src/main/java"/>
+	<classpathentry output="build/s2-dao-tiger/classes" kind="src" path="s2-dao-tiger/src/main/resources"/>
+	<classpathentry output="build/s2-dao-tiger/test-classes" kind="src" path="s2-dao-tiger/src/test/java"/>
+	<classpathentry output="build/s2-dao-tiger/test-classes" kind="src" path="s2-dao-tiger/src/test/resources"/>
+	<classpathentry output="build/s2-dao-tiger-examples/classes" kind="src" path="s2-dao-tiger-examples/src/main/java"/>
+	<classpathentry output="build/s2-dao-tiger-examples/classes" kind="src" path="s2-dao-tiger-examples/src/main/resources"/>
+	<classpathentry output="build/s2-dao-tiger-examples/test-classes" kind="src" path="s2-dao-tiger-examples/src/test/java"/>
+	<classpathentry output="build/s2-dao-tiger-examples/test-classes" kind="src" path="s2-dao-tiger-examples/src/test/resources"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/s2dao"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/seasar2"/>
-	<classpathentry kind="output" path="target/classes"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="output" path="build/s2-dao-tiger/classes"/>
 </classpath>
