ignore: build, *.log
git-svn-id: https://www.seasar.org/svn/s2dao/trunk/s2dao-tiger@446 a0133a49-3802-0410-849b-833ed23e894f

--- a/build.xml
+++ b/build.xml
@@ -5,7 +5,9 @@
 		<mkdir dir="target"/>
 		<zip zipfile="target/s2-dao-tiger-${ver}.zip">
 			<zipfileset prefix="s2dao-tiger" dir=".">
+				<exclude name="**/build/**"/>
 				<exclude name="**/target/**"/>
+				<exclude name="*.log"/>
 				<exclude name="**/.settings/**"/>
 			</zipfileset>
 			<zipfileset prefix="s2dao-tiger/lib" 
