- バージョン番号を"1.0.37-SNAPSHOT"にしました。 - Eclipseプロジェクト名の末尾に"-1.0.x"を付加しました。 - 依存するS2のバージョンを2.3系に戻しました。   2.3.13だとmvn clean installでfailするので、2.3.12にしてあります。   (どうしてfailするのかは追っていません...)
git-svn-id: https://www.seasar.org/svn/s2dao/branches/s2dao-tiger-1.0.x@587 a0133a49-3802-0410-849b-833ed23e894f

--- a/.classpath
+++ b/.classpath
@@ -8,7 +8,7 @@
 	<classpathentry output="build/s2-dao-tiger-examples/classes" kind="src" path="s2-dao-tiger-examples/src/main/resources"/>
 	<classpathentry output="build/s2-dao-tiger-examples/test-classes" kind="src" path="s2-dao-tiger-examples/src/test/java"/>
 	<classpathentry output="build/s2-dao-tiger-examples/test-classes" kind="src" path="s2-dao-tiger-examples/src/test/resources"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/s2dao"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/s2dao-1.0.x"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/seasar2"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="build/s2-dao-tiger/classes"/>
