--- a/s2-dao-tiger/pom.xml
+++ b/s2-dao-tiger/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.seasar.dao</groupId>
     <artifactId>s2-dao-tiger-project</artifactId>
-    <version>1.0.37-SNAPSHOT</version>
+    <version>1.0.39</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>s2-dao-tiger</artifactId>
@@ -15,19 +15,18 @@
   <description></description>
   <url>http://s2dao.seasar.org/</url>
   <dependencies>
-    <!--
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <groupId>org.seasar.dao</groupId>
+      <artifactId>s2-dao</artifactId>
+      <version>1.0.39</version>
       <type>jar</type>
     </dependency>
     <dependency>
       <groupId>org.seasar.dao</groupId>
       <artifactId>s2-dao</artifactId>
-      <version>1.0.37-SNAPSHOT</version>
+      <version>1.0.39</version>
       <type>test-jar</type>
+      <scope>test</scope>
     </dependency>
-    -->
   </dependencies>
 </project>
