--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <project name="s2dao-tiger" default="dist" basedir=".">
-	<property name="ver" value="1.0.37-SNAPSHOT"/>
+	<property name="ver" value="1.0.39"/>
 
 	<target name="dist">
 		<mkdir dir="target"/>
@@ -17,7 +17,6 @@
 			</zipfileset>
 			<zipfileset prefix="s2dao-tiger/resources" 
 				dir="s2-dao-tiger/src/test/resources">
-				<include name="dao.dicon"/>
 				<include name="j2ee.dicon"/>
 				<include name="log4j.properties"/>
 			</zipfileset>
