--- a/s2-dao-tiger-examples/pom.xml
+++ b/s2-dao-tiger-examples/pom.xml
@@ -22,7 +22,7 @@
       <testResource>
         <directory>${basedir}/../s2-dao-tiger/src/test/resources</directory>
         <includes>
-          <include>data/**</include>
+          <include>data-hsqldb/**</include>
         </includes>
       </testResource>
     </testResources>
