データソースの設定はS2.3はj2ee.dicon、S2.4はjdbc.diconを参照するようにする。[DAO-76]
git-svn-id: https://www.seasar.org/svn/s2dao/branches/s2dao-tiger-1.0.x@770 a0133a49-3802-0410-849b-833ed23e894f

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
-#Tue Jun 13 20:15:18 JST 2006
+#Sat Mar 03 22:01:18 JST 2007
 eclipse.preferences.version=1
+encoding//s2-dao-tiger/src/test/resources/j2ee_s24.dicon=UTF-8
+encoding//s2-dao-tiger/src/test/resources/jdbc_s24.dicon=UTF-8
 encoding/<project>=UTF-8
