s2dao開発プロジェクトをSeasar2.3.xベースにした。 Seasar2.4.x系での動作をテストする専用のプロジェクトを設けた。
git-svn-id: https://www.seasar.org/svn/s2dao/branches/s2dao-tiger-1.0.x@803 a0133a49-3802-0410-849b-833ed23e894f

--- a/s2-dao-tiger-examples/pom.xml
+++ b/s2-dao-tiger-examples/pom.xml
@@ -29,10 +29,9 @@
   </build>
   <dependencies>
     <dependency>
-      <groupId>org.seasar.dao</groupId>
+      <groupId>${project.groupId}</groupId>
       <artifactId>s2-dao-tiger</artifactId>
       <version>${project.version}</version>
-      <type>jar</type>
     </dependency>
   </dependencies>
 </project>
