[DAO-117]publicフィールドをBeanのプロパティとして認識するようにしました。 (定数アノテーションのテストはまだ)
git-svn-id: https://www.seasar.org/svn/s2dao/branches/s2dao-tiger-1.0.x@1040 a0133a49-3802-0410-849b-833ed23e894f

--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
   <modules>
     <module>s2-dao-tiger</module>
     <module>s2-dao-tiger-examples</module>
+    <module>s2-dao-tiger-s24-test</module>
   </modules>
   <build>
     <defaultGoal>validate</defaultGoal>
