--- a/s2-dao-tiger/pom.xml
+++ b/s2-dao-tiger/pom.xml
@@ -15,6 +15,16 @@
   <description></description>
   <url>http://s2dao.seasar.org/</url>
   <dependencies>
+     <dependency>
+      <groupId>org.seasar.container</groupId>
+      <artifactId>s2-extension</artifactId>
+      <version>2.3.23-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>3.8.1</version>
+    </dependency> 
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>s2-dao</artifactId>
