s2-dao-tiger-s24-testのpom.xmlがs2-dao-projectのpom.xmlを親にしていたのを修正しました。これでHudsonでビルドが成功するようになるかも、です。
git-svn-id: https://www.seasar.org/svn/s2dao/branches/s2dao-tiger-1.0.x@1283 a0133a49-3802-0410-849b-833ed23e894f

--- a/s2-dao-tiger-s24-test/pom.xml
+++ b/s2-dao-tiger-s24-test/pom.xml
@@ -5,7 +5,7 @@
 >
   <parent>
     <groupId>org.seasar.dao</groupId>
-    <artifactId>s2-dao-project</artifactId>
+    <artifactId>s2-dao-tiger-project</artifactId>
     <version>1.0.50-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
